--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <h1>Hi, I am <span class="about__name">Mayank Sahu.</span></h1>
         <h2 class="about__role">Aspiring DataScientist</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
-          I'm a Tech geek living in Bangalore, India. I love to solve problems and build things with technical skills including proficiency in the Python, C,
-          Java, SQL, AWS, Firebase, HTML, CSS, and React.js . Presently doing a Undergrad Bca student at Christ University!
+          I'm a Tech geek living in Bangalore, India. I love to solve problems and build things with technical skills including proficiency in  Python, C,
+          Java, SQL, AWS, Firebase, HTML, CSS, and React.js. Presently a BCA student at Christ University!
         </p> <!-- about you -->
         <br>
         <a href="mailto:mayanksahu.work@gmail.com">Mail: mayanksahu.work@gmail.com </a><p> Contact: +91 9165358791</p>  <!--Change it to your mail id and contact no-->
@@ -111,7 +111,7 @@
           <div class="project">
             <h3>UrbanCare</h3> <!--Peoject Title -->
             <p class="project__description">
-              2022 Ukraine Russia War Exploratory Data Analysis, Analysis was done on the day 167 of the war
+              UrbanCare is a service-based e-commerce platform with a mission to simplify urban living by providing a wide array of essential services, including laundry, salon, plumbing, electrician, mechanic, home cleaning, painting, and appliance repair. 
             </p> <!--Project description-->
             <ul class="project__stack">
               <li class="project__stack-item">HTML/CSS</li>
@@ -120,7 +120,7 @@
             </ul>
 
             <a
-              href="https://github.com/ashiksanyo10/Russia-Ukraine_War_EDA" target="_blank"
+              href="add github link" target="_blank"
               aria-label="source code"
               class="link link--icon"
             >  <!--Project link-->
@@ -142,19 +142,19 @@
         <h2 class="section__title">Internships & Certifications</h2>
 
       <div class="project">
-        <h3>Open Weaver</h3>
+        <h3></h3>
         <p class="project__description">
-          Developed several model using the prototype kit called KANDI.
+          
         </p>
         <ul class="project__stack">
-          <li class="project__stack-item">Python</li>
-          <li class="project__stack-item">Gen -Ai</li>
-          <li class="project__stack-item">Machine Learning</li>
+          <li class="project__stack-item"></li>
+          <li class="project__stack-item"></li>
+          <li class="project__stack-item"></li>
         </ul>
 
         <a
           href=""  
-          aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
+          aria-label="add link later" target="_blank"
           class="link link--icon"
         > <!-- Include the certification links and  -->
           <i aria-hidden="true" class="fab fa-github"></i>
@@ -183,10 +183,10 @@
           <li class="skills__list-item btn btn--plain">React</li>
           <li class="skills__list-item btn btn--plain">Python</li>
           <li class="skills__list-item btn btn--plain">Machine Learning</li>
-          <li class="skills__list-item btn btn--plain">Computer Vision</li>
+          <li class="skills__list-item btn btn--plain">AWS</li>
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">A/B Testing</li>
-          <li class="skills__list-item btn btn--plain">Adobe Creative Suit</li>
+          <li class="skills__list-item btn btn--plain">Firebase</li>
+          <li class="skills__list-item btn btn--plain">Figma</li>
         </ul>
       </section>
 
