--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         href="" 
         class="link footer__link"
       >  
-        Created By Mayank Sahu  <!-- edit it to your name -->
+        Created By - Mayank Sahu  <!-- edit it to your name -->
       </a>
     </footer>
 
