--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       
 
         <div class="about__contact center">
-          <a href="https://drive.google.com/file/d/1fiYlv7Ou0tKWSdUlQwpc5Ye3hDEya3kK/view" target="_blank"  > <!-- drive link for resume-->
+          <a href="https://drive.google.com/file/d/1dMcxUImNfOEAxbrKBrONL5PCet-hnCDN/view?usp=drive_link" target="_blank"  > <!-- drive link for resume-->
             <span class="btn btn--outline">Resume</span> 
           </a>
 
