--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <header class="header center">
       <h3>
         <a href="" class="link"  
-          >{AS}. <!--insert your initials here --></a
+          >{MS}. <!--insert your initials here --></a
         >
-      </h3> http://www.linkedin.com/in/mayanksahu-in<!--use the linkedIn or any link in above href-->
+      </h3> <!--use the linkedIn or any link in above href-->
 
       <nav class="nav center">
         <ul class="nav__list center">
